<resources>
    <string name="app_name">Paisa Money</string>
    <string name="dummy_name">Mohit Anand</string>
    <string name="dummy_balance">₹3.00</string>
    <string name="wallet_balance">Wallet Balance</string>
    <string name="dummy_wallet_balance">₹98.78</string>
    <string name="withdraw">Withdraw</string>
    <string name="dummy_category_name">Ludo</string>
    <string name="category_image">Category Image</string>
    <string name="option_image">Option Image</string>
    <string name="rate_5_star_amp_earn_money"><![CDATA[Rate 5 Star & Earn Money]]></string>
    <string name="dummy_chances">1 Chance left</string>
    <string name="reward_completed">Reward Completed</string>
    <string name="earn_money">Earn Money</string>
    <string name="spin">Spin</string>
    <string name="scratch_card">Scratch Card</string>
    <string name="others">Offers</string>
    <string name="profile">Profile</string>
    <string name="spin_wheel">Spin Wheel</string>
    <string name="gift_card">Gift Card</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contact_us">Contact us</string>
    <string name="terms"><![CDATA[Terms & Conditions]]></string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="referral_earning">Referral Earning</string>
    <string name="invite"><![CDATA[Invite & Earn]]></string>
    <string name="dummy_email">mohitanand@gmail.com</string>
    <string name="dummy_withdraw_amount">₹100.00 ≈ $1.00</string>
    <string name="your_balance">Your Balance</string>
    <string name="paypal">Paypal</string>
    <string name="dummy_paypal_amount">$1.00</string>
    <string name="paytm">Paytm</string>
    <string name="dummy_inr_amount">₹100</string>
    <string name="phonepe">PhonePe</string>
    <string name="gpay">GPay</string>
    <string name="copy_code">Copy code below and share with your friends</string>
    <string name="dummy_referral_code">ABHJ1872</string>
    <string name="referral_code">Referral Code</string>
    <string name="copy">COPY</string>
    <string name="referral_description"><![CDATA[Share your code & get 10% of the commision for lifetime earning]]></string>
    <string name="whatsapp">Whatsapp</string>
    <string name="telegram">telegram</string>
    <string name="share">share</string>
    <string name="dummy_friends_joined">0</string>
    <string name="friends_joined">Friends Joined</string>
    <string name="dummy_total_earning">₹0.00</string>
    <string name="total_earning">Total Earning</string>
    <string name="name">Name</string>
    <string name="earnings">Earnings</string>
    <string name="dummy_friend_name">Ravi Anand</string>
    <string name="dummy_earning_by_referral">₹0.025</string>
    <string name="dummy_chances_left">10 Chances Left</string>
    <string name="congratulations">Congratulations!</string>
    <string name="you_won">You Won</string>
    <string name="dummy_won_amount">₹0.10</string>
    <string name="spinning_wheel_tracker">Spinning Wheel Tracker</string>
    <string name="spinning_wheel">Spinning Wheel</string>
    <string name="claim">Claim</string>
    <string name="payment_mode">Mode</string>
    <string name="payment">Payment</string>
    <string name="paypal_id">Paypal id</string>
    <string name="phone_no">Phone no.</string>
    <string name="OAuthClientId">18504745640-jvts15p15bsjed7aiio9ikhcgjmagi2c.apps.googleusercontent.com</string>
    <string name="user_data">user_data</string>
    <string name="withdraw_amount">Withdraw Amount</string>
    <string name="refresh_user_data">Refresh User Data</string>
    <string name="back">Back</string>
    <string name="refer_code">Refer Code</string>
    <string name="refer_code_optional">Refer Code (Optional)</string>
    <string name="continue1">CONTINUE</string>
    <string name="login_button">login Button</string>
    <string name="ludo">Ludo</string>
    <string name="chess">Chess</string>
    <string name="pubg">Pubg</string>
    <string name="puzzle">Puzzle</string>
    <string name="card">CARD</string>
    <string name="daily_bonus">Daily Bonus</string>
    <string name="collect_rewards">Collect Rewards</string>
    <string name="watch_videos">Watch Videos</string>
    <string name="gold_points">Gold Points</string>
    <string name="reward_name_daily_bonus">dailyBonus</string>
    <string name="reward_name_collect_rewards">collectRewards</string>
    <string name="reward_name_watch_videos">watchVideos</string>
    <string name="reward_name_gold_points">goldPoints</string>
    <string name="chances_left">chancesLeft</string>
    <string name="daily_bonus_time">dailyBonusTime</string>
    <string name="collect_reward_time">collectRewardTime</string>
    <string name="watch_video_time">watchVideoTime</string>
    <string name="gold_points_time">goldPointsTime</string>
    <string name="max_chances_left">5 Chances Left</string>
    <string name="dummy_reward_amount">₹10</string>
    <string name="spin_fragment">Spin</string>
    <string name="scratch_fragment">Scratch</string>
    <string name="options">Options</string>
</resources>