<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFBF4"
    tools:context=".Activity.ReferralEarningActivity">

    <TextView
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/referral_earning"
        android:fontFamily="@font/lato_bold"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="22dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/earning_card_view"
        android:layout_width="match_parent"
        android:layout_height="116dp"
        android:background="@drawable/wallet_balance_background"
        android:layout_marginTop="100dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/tv_wallet_balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dummy_name"
            android:fontFamily="@font/lato_regular"
            android:textSize="18sp"
            android:textColor="#80000000"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/friends_joined"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dummy_friends_joined"
            android:fontFamily="@font/lato_bold"
            android:textSize="22sp"
            android:textColor="@color/black"
            android:layout_marginStart="65dp"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_wallet_balance"/>

        <TextView
            android:id="@+id/tv_friends_joined"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/friends_joined"
            android:fontFamily="@font/lato_regular"
            android:textSize="14sp"
            android:textColor="#80000000"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/friends_joined"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/total_earning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dummy_total_earning"
            android:fontFamily="@font/lato_bold"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_marginStart="65dp"
            android:layout_marginTop="55dp"
            app:layout_constraintStart_toEndOf="@id/friends_joined"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@id/friends_joined"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_total_earning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_earning"
            android:fontFamily="@font/lato_regular"
            android:textSize="14sp"
            android:textColor="#80000000"
            app:layout_constraintStart_toStartOf="@id/total_earning"
            app:layout_constraintTop_toBottomOf="@id/total_earning"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/total_earning"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#484848"
        android:layout_marginTop="45dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/earning_card_view"/>

    <LinearLayout
        android:id="@+id/table_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider">

        <TextView
            android:layout_height="19dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/name"
            android:textStyle="bold"
            android:gravity="center"
            android:fontFamily="@font/lato_regular"
            android:textSize="16sp"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="19dp"
            android:text="@string/earnings"
            android:fontFamily="@font/lato_regular"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_marginStart="25dp" />

    </LinearLayout>

    <View
        android:id="@+id/color_divider"
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:background="#FFF3DA"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/table_header"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/referral_earning_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/color_divider"/>

</androidx.constraintlayout.widget.ConstraintLayout>