<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFBF4"
    tools:context=".Fragments.ProfileFragment">

    <TextView
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dummy_name"
        android:fontFamily="@font/lato_bold"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="22dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_balance"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:background="@drawable/balance_bakcgrond"
        android:text="@string/dummy_balance"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/user_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dummy_email"
        android:fontFamily="@font/lato_regular"
        android:textSize="14sp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="6dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_name"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/wallet_card_layout"
        android:layout_width="match_parent"
        android:layout_height="116dp"
        android:background="@drawable/wallet_balance_background"
        android:layout_marginTop="100dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/tv_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wallet_balance"
            android:fontFamily="@font/lato_regular"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_marginStart="35dp"
            android:layout_marginTop="25dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/wallet_balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dummy_wallet_balance"
            android:fontFamily="@font/lato_bold"
            android:textSize="22sp"
            android:textColor="@color/black"
            android:layout_marginStart="35dp"
            android:layout_marginTop="25dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_user_name"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_withdraw"
            android:layout_width="105dp"
            android:layout_height="36dp"
            android:background="@drawable/btn_withdraw_background"
            android:text="@string/withdraw"
            android:textColor="#FFBC36"
            android:textAllCaps="false"
            android:fontFamily="@font/lato_regular"
            android:textSize="14sp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/wallet_card_layout">

        <LinearLayout
            android:id="@+id/btn_invite_earn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="40dp"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/wallet_card_layout">

            <ImageView
                android:layout_height="24dp"
                android:layout_width="24dp"
                android:src="@drawable/ic_invite"
                android:contentDescription="@string/invite" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/invite"
                android:fontFamily="@font/lato_regular"
                android:textSize="18sp"
                android:textColor="#4a4a4a"
                android:layout_marginStart="25dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_referral_earning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="40dp"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/wallet_card_layout">

            <ImageView
                android:layout_height="24dp"
                android:layout_width="24dp"
                android:src="@drawable/ic_referral_earning"
                android:contentDescription="@string/referral_earning"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/referral_earning"
                android:fontFamily="@font/lato_regular"
                android:textSize="18sp"
                android:textColor="#4a4a4a"
                android:layout_marginStart="25dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_privacy_policy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="40dp"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/wallet_card_layout">

            <ImageView
                android:layout_height="24dp"
                android:layout_width="24dp"
                android:src="@drawable/ic_privacy_policy"
                android:contentDescription="@string/privacy_policy"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/privacy_policy"
                android:fontFamily="@font/lato_regular"
                android:textSize="18sp"
                android:textColor="#4a4a4a"
                android:layout_marginStart="25dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_terms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="40dp"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/wallet_card_layout">

            <ImageView
                android:layout_height="24dp"
                android:layout_width="24dp"
                android:src="@drawable/ic_terms"
                android:contentDescription="@string/terms"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terms"
                android:fontFamily="@font/lato_regular"
                android:textSize="18sp"
                android:textColor="#4a4a4a"
                android:layout_marginStart="25dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_contact_us"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="40dp"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/wallet_card_layout">

            <ImageView
                android:layout_height="24dp"
                android:layout_width="24dp"
                android:src="@drawable/ic_contact"
                android:contentDescription="@string/contact_us" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_us"
                android:fontFamily="@font/lato_regular"
                android:textSize="18sp"
                android:textColor="#4a4a4a"
                android:layout_marginStart="25dp" />

        </LinearLayout>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>